kubernetes/external-applications/truenas-general/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: truenas-general
  namespace: external-applications
spec:
  type: ExternalName
  ports:
  - name: https
    port: 443
  externalName: 10.0.0.8
