kubernetes/external-applications/truenas-general/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: truenas-general
  namespace: external-applications
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas-general.local.syspawn.com`)
      kind: Rule
      services:
        - name: truenas-general
          port: 443
  tls:
    secretName: local-syspawn-com-tls
